--- a/templates/orders.html
+++ b/templates/orders.html
@@ -5,16 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-<table>
+<table border="1">
     {% for order in orders %}
         <tr>
-            <td>{{ order.no }}</td>>
+            <td>{{ order.no }}</td>
             <td>{{ order.goods.name }}</td>
             <td>{{ order.get_status_display }}</td>
         </tr>>
     {% endfor %}
 </table>
-
-
 </body>
 </html>
